# racho

./: .envrc  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  run_tcp_off.sh  run_tcp_on.sh  rust-toolchain.toml  tcp_gdb_on.sh
.cargo/: config.toml
.github/workflows/: CI.yml  ci.yml
framework/: Cargo.toml  build.rs  linker-qemu.ld
framework/src/: boot.rs  lib.rs  link_app.S  memory.rs  sync.rs  task.rs  trap.rs
framework/src/task/: context.rs
kernel/: Cargo.toml  build.rs  rust_objcopy.sh
kernel/src/: boards.rs  config.rs  link_app.S  loader.rs  logging.rs  main.rs  mm.rs  sync.rs  syscall.rs  task.rs  timer.rs  trap.rs
kernel/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  page_table.rs
kernel/src/sync/: up.rs
kernel/src/syscall/: fs.rs  process.rs
kernel/src/task/: switch.S  task.rs
kernel/src/trap/: context.rs  mod.rs  trap.S
os/: Cargo.toml  Makefile  build.rs  rust_objcopy.sh
os/src/: batch.rs  config.rs  lang_items.rs  link_app.S  linker-qemu.ld  linker.ld  loader.rs  logging.rs  main.rs  sbi.rs  timer.rs
os/src/boards/: qemu.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/task/: context.rs  mod.rs  switch.S  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs  trap.S
src/: console.rs  entry.asm  linker.ld  main.rs  sbi.rs
tools/: gdb_client.sh  run_qemu.sh
user/: Cargo.toml  Makefile  build.py  build.rs  rust-analyzer.toml
user/src/: lang_items.rs  lib.rs  linker.ld
user_lib/: build.rs
user_lib/src/: console.rs  lib.rs  syscall.rs
