[workspace]
resolver = "2"
members = [
    "kernel",
    "user_lib",
    "framework",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
xmas-elf = "0.7.0"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"

[workspace.lints.rust]
redundant_imports = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"

[profile.release]
debug = true
