[package]
name = "kernel"
version.workspace = true
edition.workspace = true

[dependencies]
riscv.workspace = true
lazy_static.workspace = true
log.workspace = true
xmas-elf.workspace = true
sbi-rt.workspace = true
buddy_system_allocator.workspace = true
bitflags.workspace = true

[lints]
workspace = true
